fixing spacing issues
fixing the empty space

--- a/css/screen.css
+++ b/css/screen.css
@@ -111,7 +111,7 @@
 }
 #information{
   margin-top: 1%;
-  background: linear-gradient(#b85de68c, rgba(0, 0, 255, 0.511));
+  background: linear-gradient(#b85de68c, rgba(224, 224, 231, 0.892));
 
  
 }
